# nuvoryx

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  configuracion.py  extensiones.py  modelos.py  models.py  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt
.github/workflows/: lint.yml  pre-commit.yml  test.yml
blueprints/: archivos.py  autenticacion.py  notificaciones.py  principal.py
scripts/: format.sh  lint.sh  test.sh
static/css/: main.css
static/css/base/: globales.css  reset.css  variables.css
static/css/components/: barra_flotante.css  barra_navegacion.css  botones.css  buttons.css  cuadricula.css  floating-bar.css  modales.css  modals.css  navbar.css  paneles.css  panels.css  previsualizacion.css  tabla.css  table.css
static/css/layout/: area_subida.css  container.css  contenedores.css  estadisticas.css  stats.css  upload-area.css
static/js/: main.js
static/js/modules/: archivos.js  autenticacion.js  auth.js  files.js  filters.js  filtros.js  interfaz.js  stats.js  subidas.js  ui.js  uploads.js  utilidades.js  utils.js  validaciones.js
templates/: 403.html  404.html  base.html  index.html
templates/partials/: _area_subida.html  _auth_modals.html  _barra_cabecera.html  _breadcrumbs.html  _estadisticas.html  _file_table.html  _modales.html  _modales_autenticacion.html  _modals.html  _navbar.html  _ruta_navegacion.html  _stats.html  _tabla_archivo.html  _upload_area.html
tests/: conftest.py  test_archivos.py  test_autenticacion.py  test_auth.py  test_files.py  test_modelos.py  test_models.py  test_notificaciones.py  test_registro_bug.py  test_routes.py  test_rutas.py  test_seguimiento_carpetas.py
utils/: token.py  utilidades.py  utils.py
workflows/: test.yml
