[project]
name = "nuvoryx"
version = "1.0.0"
description = "Sistema de gestión de archivos en la nube con autenticación de usuarios"
authors = [{name = "jeironpro"}]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "flask",
    "flask-sqlalchemy",
    "flask-login",
    "flask-mail",
    "pymysql",
    "bcrypt",
    "itsdangerous",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-flask",
    "pre-commit",
]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 135
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]
exclude = ["tests*", "static*", "templates*", "uploads*", "scripts*"]
